create user, tags swagger UI, bug JWT fixed swagger and update comment openapi
